Добавляет разметку и стилизацию адаптивного header

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -5,3 +5,9 @@
 
 /* BLOCKS */
 @import "blocks/header";
+@import "blocks/logo.scss";
+@import "blocks/navigation.scss";
+@import "blocks/nav-list.scss";
+@import "blocks/user-list.scss";
+@import "blocks/page.scss";
+
