--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -1,9 +1,38 @@
+@import "../global/variables.scss";
+
 .header {
-  background-color: #514f4f;
-  color: #ffffff;
+  max-width: 3840px;
   display: flex;
-  width: 320px;
-  padding: 0 0 12px 0;
-  flex-direction: column;
-  align-items: flex-start;
+  justify-content: space-between;
+  align-items: center;
+  position: relative;
+  font-weight: 500;
+  color: #000000;
+  background-color: #ffffff;
+
+  @media (min-width: $desktop-width) {
+    width: 1440px;
+  }
+}
+
+.header__logo-wrapper {
+  display: flex;
+  margin-left: 20px;
+
+  @media (min-width: $desktop-width) {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    margin-left: 40px;
+    align-items: center;
+  }
+}
+
+.header__logo-description {
+  display: none;
+
+  @media (min-width: $desktop-width) {
+    display: inline;
+    max-width: 130px;
+  }
 }
