--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -1,1 +1,5 @@
-/* здесь используйте глобальные переменные */
+$tablet-width: 768px;
+$desktop-width: 1440px;
+
+$base-black: #333333;
+$base-white: #ffffff;
