--- a/source/sass/blocks/nav-list.scss
+++ b/source/sass/blocks/nav-list.scss
@@ -1,11 +1,41 @@
 @import "../global/variables.scss";
 
 .nav-list {
+  padding: 0;
   list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+
+  @media (min-width: $tablet-width) {
+    flex-direction: row;
+  }
 }
 
 .nav-list__item {
-  padding: 32px 20px;
+  position: relative;
+  padding: 20px;
+  text-align: center;
+
+  @media (min-width: $tablet-width) {
+    content: none;
+    padding: 32px 20px;
+  }
+
+  @media (min-width: $desktop-width) {
+    content: none;
+    padding: 32px 20px;
+  }
+
+  &::before {
+    position: absolute;
+    content: "";
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 1px;
+    background-color: #f0ebff;
+  }
 }
 
 .nav-list__link {
@@ -13,4 +43,9 @@
   color: $base-black;
   text-decoration: none;
   text-transform: uppercase;
+
+  @media (min-width: $tablet-width) {
+    position: relative;
+    padding: 32px 15px;
+  }
 }
