--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -1,7 +1,7 @@
 @import "../global/variables.scss";
 
 .header {
-  max-width: 3840px;
+  // max-width: 3840px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -11,7 +11,11 @@
   background-color: #ffffff;
 
   @media (min-width: $desktop-width) {
-    width: 1440px;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    gap: 20px;
+    margin-left: 40px;
   }
 }
 
