--- a/source/sass/blocks/user-list.scss
+++ b/source/sass/blocks/user-list.scss
@@ -2,6 +2,8 @@
 
 .user-list {
   list-style: none;
+  margin-top: 0;
+  margin-bottom: 0;
 
   @media (min-width: $desktop-width) {
     gap: 20px;
