--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -10,4 +10,10 @@
 @import "blocks/nav-list.scss";
 @import "blocks/user-list.scss";
 @import "blocks/page.scss";
+@import "blocks/slider.scss";
+@import "blocks/button.scss";
+@import "blocks/features.scss";
+@import "blocks/catalog.scss";
+@import "blocks/form.scss";
+@import "blocks/product.scss";
 
