--- a/source/sass/blocks/navigation.scss
+++ b/source/sass/blocks/navigation.scss
@@ -63,19 +63,28 @@
 
   @media (min-width: $tablet-width) {
     position: static;
+    width: auto;
   }
 }
 
-.navigation--nojs {
-  position: static;
-  min-height: 0;
+.navigation--nojs .navigation__toggle {
+  display: none;
 }
 
 .navigation--nojs .navigation__list {
-  display: block;
-  position: static;
+  display: flex;
+  position: absolute;
+  z-index: 1;
+  width: 100%;
+  left: 0;
+  bottom: 0;
+  transform: translateY(100%);
+  background-color: $base-white;
 
   @media (min-width: $tablet-width) {
+    position: static;
     display: flex;
+    width: auto;
+    transform: none;
   }
 }
