--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -5,11 +5,10 @@ $base-black: #333333;
 $base-white: #ffffff;
 $base-primary: #7859cf;
 $base-grey: #bdbdbd;
+$base-secondary: #f0ebff;
 $light-grey: #e2e2e2;
-$lightest-grey: #f8f8f8f8;
+$lightest-grey: #f8f8f8;
 $primary-lighter: #9070ec;
 $flat-white: #f3ebe1;
 $espresso: #e5e6e8;
 $lavender-latte: #eae6fc;
-
-
