--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -1,14 +1,18 @@
 @import "../global/variables.scss";
 
 .header {
-  // max-width: 3840px;
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
-  position: relative;
+  font-family: "Montserrat", "Arial", sans-serif;
+  font-style: normal;
   font-weight: 500;
-  color: #000000;
-  background-color: #ffffff;
+  font-size: 12px;
+  line-height: 16px;
+  color: $base-black;
+  background-color: $base-white;
+  position: relative;
 
   @media (min-width: $desktop-width) {
     display: flex;
