--- a/source/sass/blocks/user-list.scss
+++ b/source/sass/blocks/user-list.scss
@@ -1,21 +1,32 @@
 @import "../global/variables.scss";
 
 .user-list {
-  list-style: none;
+  max-width: 180px;
+  padding: 0;
   margin-top: 0;
   margin-bottom: 0;
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+
+  @media (min-width: $tablet-width) {
+    margin: 0 20px 0 0;
+  }
 
   @media (min-width: $desktop-width) {
-    gap: 20px;
+    margin: 0 40px 0 0;
+    max-width: 360px;
   }
 }
 
 .user-list__link {
   display: flex;
-  gap: 8px;
-  text-transform: uppercase;
+  align-items: center;
+  gap: 10px;
+  padding: 22px;
+  color: $base-black;
   text-decoration: none;
-  font-weight: 500;
+  text-transform: uppercase;
 }
 
 .user-list__description {
@@ -23,11 +34,5 @@
 
   @media (min-width: $desktop-width) {
     display: inline;
-    color: $base-black;
-    text-decoration: none;
   }
-}
-
-.user-list__item {
-  padding: 22px;
 }
