--- a/source/sass/global/global.scss
+++ b/source/sass/global/global.scss
@@ -10,3 +10,46 @@
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
+
+
+.noUi-connect {
+  box-shadow: none;
+  background-color: $primary-lighter;
+}
+
+.noUi-connects {
+  height: 4px;
+}
+
+.noUi-target {
+  box-shadow: none;
+  border: none;
+  background-color: $primary-lighter;
+}
+
+.noUi-handle::before,
+.noUi-handle::after {
+  box-shadow: none;
+  display: none;
+}
+
+.noUi-handle-lower {
+  box-shadow: none;
+  background-color: $base-white;
+  border: 2px solid $primary-lighter;
+  border-radius: 50%;
+}
+
+.noUi-handle-upper {
+  box-shadow: none;
+  background-color: $base-white;
+  border: 2px solid $primary-lighter;
+  border-radius: 50%;
+}
+
+.noUi-horizontal .noUi-handle {
+  width: 24px;
+  height: 24px;
+  right: -12px;
+  top: -9px;
+}
