--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,19 +1,23 @@
 /* GLOBAL */
 @import "global/variables";
-@import "global/global";
 @import "global/fonts";
+@import "nouislider/nouislider";
+@import "swiper/swiper";
 
 /* BLOCKS */
 @import "blocks/header";
-@import "blocks/logo.scss";
-@import "blocks/navigation.scss";
-@import "blocks/nav-list.scss";
-@import "blocks/user-list.scss";
-@import "blocks/page.scss";
-@import "blocks/slider.scss";
-@import "blocks/button.scss";
-@import "blocks/features.scss";
-@import "blocks/catalog.scss";
-@import "blocks/form.scss";
-@import "blocks/product.scss";
-
+@import "blocks/logo";
+@import "blocks/navigation";
+@import "blocks/nav-list";
+@import "blocks/user-list";
+@import "blocks/page";
+@import "blocks/slider";
+@import "blocks/button";
+@import "blocks/features";
+@import "blocks/catalog";
+@import "blocks/form";
+@import "blocks/product";
+@import "blocks/map";
+@import "blocks/footer";
+@import "blocks/social";
+@import "blocks/visually-hidden";
