--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -85,6 +85,7 @@
   height: 4px;
   background-color: $primary-lighter;
   width: 240px;
+  display: none;
 
   @media (min-width: $tablet-width) {
     width: 192px;
